--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -400,12 +400,19 @@
     <string name="pay_commitOrder">提交订单</string>
     <string name="pay_notice">《用户支付须知》</string>
     <string name="pay_havereaded">我已阅读</string>
+    <string name="pay_orderFormNumber">订单号: </string>
+    <string name="pay_orderFormPrice">订单金额: </string>
     <string name="pay_finalPay">需支付</string>
     <string name="pay_discounts">优惠</string>
     <string name="pay_originalCost">原价</string>
     <string name="pay_CouponAvailable">可用优惠券</string>
+    <string name="pay_checkPayMode">请选择支付方式</string>
     <string name="pay_agreement">支付协议</string>
+    <string name="pay_WeChatPay">微信支付</string>
+    <string name="pay_Alipay">支付宝支付</string>
     <string name="pay_NoCouponsAvailable">暂无可用优惠券</string>
+    <string name="pay_commitOrderSuccess">生成订单成功</string>
+    <string name="pay_commitOrderSuccess2">请在24小时内完成支付，超时后将取消订单</string>
 
     <!-- Strings related to 发票 -->
     <string name="invoice">发票</string>
