--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,8 @@
     <string name="learncenter_examTips1">进行%s天</string>
     <string name="learncenter_examTips2">共%s天 </string>
     <string name="progressbarIndetior">已出勤%s天</string>
+    <string name="learncenter_exitMessage">退出计划后，学习记录将无法找回</string>
+    <string name="learncenter_exitTitle">退出学习计划</string>
 
     <!-- Strings related to 我的订单 -->
     <string name="orderForm_info">订单信息</string>
@@ -411,6 +413,8 @@
     <string name="pay_WeChatPay">微信支付</string>
     <string name="pay_Alipay">支付宝支付</string>
     <string name="pay_NoCouponsAvailable">暂无可用优惠券</string>
+    <string name="pay_addAddress">请添加地址</string>
+    <string name="pay_readPayNotice">请同意支付协议</string>
     <string name="pay_commitOrderSuccess">生成订单成功</string>
     <string name="pay_commitOrderSuccess2">请在24小时内完成支付，超时后将取消订单</string>
 
