--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,6 +455,7 @@
     <string name="message_center">消息中心</string>
     <string name="message_notice">网校公告</string>
     <string name="message_notification">系统通知</string>
+    <string name="message_check">进入查看</string>
 
     <!--string related to common-->
     <string name="WeChatfriend">微信好友</string>
