--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -471,6 +471,7 @@
     <string name="easy">简单</string>
     <string name="WeChatfriend">微信好友</string>
     <string name="CircleOfFriends">朋友圈</string>
+    <string name="ThisIsTheLatestVersion">当前已是最新版本</string>
     <string name="expand">展开</string>
     <string name="closed">关闭</string>
     <string name="ISee">我知道了</string>
