--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -467,12 +467,16 @@
     <string name="message_courseHolder">上课提醒通知</string>
 
     <!--string related to common-->
+    <string name="WhetherToUpgrade">是否升级到%s版本？</string>
+    <string name="ThisIsTheLatestVersion">当前已是最新版本</string>
+    <string name="update">升级</string>
+
+    <!--string related to common-->
     <string name="difficulty">困难</string>
     <string name="medium">中等</string>
     <string name="easy">简单</string>
     <string name="WeChatfriend">微信好友</string>
     <string name="CircleOfFriends">朋友圈</string>
-    <string name="ThisIsTheLatestVersion">当前已是最新版本</string>
     <string name="expand">展开</string>
     <string name="closed">关闭</string>
     <string name="ISee">我知道了</string>
