离线下载DB逻辑修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="mine_feedback">意见反馈</string>
     <string name="mine_about">关于优财</string>
     <string name="mine_didnotopen">未开启</string>
+    <string name="mine_tologin">点击登录</string>
     <string name="mine_sendTenintegral">送10积分</string>
     <string name="mine_personnelsetting">个人设置</string>
     <string name="mine_updatePWD">修改密码</string>
